[project]
name = "simulstreaming"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # dependency from WhisperStreaming:
    "librosa",
    # for using Silero VAD with WhisperStreaming, torchaudio is needed
    "torchaudio",
    # from SimulWhisper
    "torch",
    # from Whisper
    "tqdm",
    "tiktoken",
    # both Whisper and SimulWhisper. Now supports Triton 2.x and 3.x with compatibility fix
    "triton>=2.0.0;platform_machine=='x86_64' and sys_platform=='linux' or sys_platform=='linux2'",
]
