[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/simulstreaming"]
exclude = ["*.wav", "requirements.txt", "uv.lock"]

[project]
name = "simulstreaming"
version = "0.1.4"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # dependency from WhisperStreaming:
    "librosa",
    # for using Silero VAD with WhisperStreaming, torchaudio is needed
    "torchaudio",
    # from SimulWhisper
    "torch",
    # from Whisper
    "tqdm",
    "tiktoken",
    # both Whisper and SimulWhisper. Now supports Triton 2.x and 3.x with compatibility fix
    "triton>=2.0.0;platform_machine=='x86_64' and sys_platform=='linux' or sys_platform=='linux2'",
]

[project.scripts]
simulstreaming = "simulstreaming.simulstreaming_whisper:main"
simulstreaming_server = "simulstreaming.simulstreaming_whisper_server:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
